[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vispath"
version = "1.0.0"
description = "Visualization toolkit for neural pathways - standalone component from Hemibrain Connectomes Analysis"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kun-Da Wu"}
]
keywords = ["neuroscience", "visualization", "pathways", "connectomics", "network-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "scipy>=1.7.0",
    "plotly>=5.0.0",
    "networkx>=2.6.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
]

all = [
    "vispath[gui]"
]

[project.urls]
Homepage = "https://github.com/Swida-Alba/hemibrain-connectomes-analysis"
Repository = "https://github.com/Swida-Alba/hemibrain-connectomes-analysis"
Documentation = "https://github.com/Swida-Alba/hemibrain-connectomes-analysis/blob/main/README.md"
"Parent Project" = "https://github.com/Swida-Alba/hemibrain-connectomes-analysis"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vispath_pkg*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json"]
